<?php


class PaymentHistory
{
    function findPaymentForClient($clientId){
        return array(50, 140, 20, 15);
    }
}