<?php
class TopPayments{
    function findMaxForClientWithId($clientId){
        return 180;
    }
}